--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
+    "jose": "^5.8.0",
     "lucide-react": "^0.438.0",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
