--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.15",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,6 +29,7 @@
     "lucide-react": "^0.438.0",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
